# jtme-bot-cpp

./: CMakeLists.txt  library.cpp
Launcher/: CMakeLists.txt  main.cpp
